--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html><head><base href="about:blank">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>AutoWays - Free Roam Racing</title>
+<title>CAR Game</title>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 <style>
 * { margin: 0; padding: 0; box-sizing: border-box; }
